<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="@dimen/user_form_width"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:id="@+id/connectTextView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/userEmailEditText"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/connectTextView"
                android:singleLine="true"
                android:hint="@string/user_placeholder_email"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:singleLine="true"
                android:id="@+id/userPasswordEditText"
                android:layout_below="@+id/userEmailEditText"
                android:layout_centerHorizontal="true"
                android:hint="@string/user_placeholder_password" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_placeholder_password_forget"
                android:id="@+id/userPasswordForgetButton"
                android:layout_below="@+id/userPasswordEditText"
                android:layout_alignLeft="@+id/userPasswordEditText"
                android:layout_alignStart="@+id/userPasswordEditText"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login_button"
                android:id="@+id/userLoginButton"
                android:layout_below="@+id/userPasswordForgetButton"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login_separator"
                android:id="@+id/connectHelperTextView"
                android:layout_below="@+id/userLoginButton"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignTop="@+id/connectHelperTextView"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_alignTop="@+id/connectHelperTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login_fb_helper"
                android:id="@+id/helperFbTextView"
                android:layout_below="@+id/connectHelperTextView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login_fb_button"
                android:id="@+id/userFacebookLoginButton"
                android:layout_below="@+id/helperFbTextView"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>