<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginScrollView"
        android:layout_centerHorizontal="true"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/loginRelativeLayout"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="@dimen/user_form_width"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_adress_title"
                    android:id="@+id/userAdressTitle"
                    android:textSize="@dimen/user_form_title_sp"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/user_text_color" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userFirstnameEditText"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_prenom"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint"
                    android:inputType="textPersonName"
                    android:layout_below="@+id/userAdressTitle" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/userLastnameEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userFirstnameEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_name"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/userEmailEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userLastnameEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_email"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint" />




                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/userPhoneEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userEmailEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_phone"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:id="@+id/userAdressEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userPhoneEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_adress"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:id="@+id/userAdressMoreEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userAdressEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_adress_more"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint" />


                <View
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/centerHelper"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userAdressMoreEditText"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/userPostalcodeEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userAdressMoreEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_postalcode"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint"
                    android:layout_toLeftOf="@+id/centerHelper" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/userCityEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/userAdressMoreEditText"
                    android:singleLine="true"
                    android:hint="@string/user_placeholder_city"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:textStyle="normal"
                    android:textColorHint="@color/user_text_color_hint"
                    android:layout_toRightOf="@+id/centerHelper"
                    android:maxLines="1" />


                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:id="@+id/userPasswordEditText"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/user_placeholder_password"
                    android:background="@drawable/edittext_round"
                    android:textSize="@dimen/user_form_edit_sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="normal"
                    android:textColorLink="@color/user_text_color"
                    android:textColorHint="@color/user_text_color_hint"
                    android:layout_below="@+id/userCityEditText"
                    android:visibility="gone" />


                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_save_button"
                    android:id="@+id/userSaveButton"
                    android:layout_below="@+id/userPostalcodeEditText"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="true"
                    android:layout_marginBottom="20dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/button_green" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>