<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:clickable="false"
    android:background="@color/background_drawer"
    android:paddingTop="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_footer_copyright"
        android:id="@+id/navfooter_copyright"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:gravity="center|center_vertical" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/navfooter_copyright"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_footer_contact"
            android:id="@+id/navfooter_contact"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_footer_cgu"
            android:id="@+id/navfooter_cgu"
            android:textSize="12sp"
            android:layout_alignBaseline="@+id/navfooter_contact"
            android:layout_toEndOf="@+id/navfooter_contact"
            android:layout_toRightOf="@+id/navfooter_contact"
            android:paddingStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_footer_about"
            android:id="@+id/navfooter_about"
            android:textSize="12sp"
            android:layout_alignBaseline="@+id/navfooter_contact"
            android:layout_toEndOf="@id/navfooter_cgu"
            android:layout_toRightOf="@+id/navfooter_cgu"
            android:paddingStart="5dp" />
    </RelativeLayout>

</RelativeLayout>